Finalização da atenticação
Nesta versão, concluímos a implementação da autenticação por token, permitindo que os usuários se autentiquem e acessem o sistema com segurança. Também definimos regras de acesso específicas para perfis de admin e aluno, garantindo permissões adequadas. Além disso, introduzimos um sistema de logs para registrar eventos importantes e iniciamos os testes das funções no banco de dados, visando garantir o correto funcionamento das consultas e operações. Essas melhorias aprimoram a segurança e a qualidade do sistema, proporcionando uma experiência mais confiável para os usuários.

--- a/Frontend/about.html
+++ b/Frontend/about.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>Sobre</title>
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/buttons.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/inputs.css">
@@ -14,7 +14,7 @@
       <a href="index.html" class="logo" >Logo</a>
     </div>
       <a class="expansor"></a>
-      <h2 class="title">Home</h2>
+      <h2 class="title">Sobre</h2>
     <div class="center">
         <nav>
           <ul>
