--- a/Frontend/contact.html
+++ b/Frontend/contact.html
@@ -14,7 +14,7 @@
       <a href="index.html" class="logo" >Logo</a>
     </div>
       <a class="expansor"></a>
-      <h2 class="title">Home</h2>
+      <h2 class="title">Contato</h2>
     <div class="center">
         <nav>
           <ul>
