--- a/Frontend/register.html
+++ b/Frontend/register.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Página de Cadastro</title>
+    <title>Cadastro</title>
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/buttons.css">
@@ -11,15 +11,12 @@
 <body>
   <header>
     <!-- Conteúdo do header -->
-    <h1>Logo</h1>
-      <nav>
-        <!-- Conteúdo da navbar -->
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="#">Sobre</a></li>
-          <li><a href="#">Contato</a></li>
-        </ul>
-      </nav>
+    <div class="logo">
+      <a href="index.html" class="Cadastro" >Logo</a>
+    </div>
+      <a class="expansor"></a>
+      <h2 class="title">Home</h2>
+
   </header>
   <main class="main">
       <div class="container">
@@ -67,7 +64,7 @@
     <!-- Conteúdo do footer -->
     <p>&copy; 2023 University. Todos os direitos reservados.</p>
   </footer>
-  <script src="./assets/js/cadastro.js"></script>
+  <script src="assets/js/register.js"></script>
   <script src="assets/js/validator.js"></script>
 </body>
 </html>
