--- a/Frontend/courses.html
+++ b/Frontend/courses.html
@@ -7,37 +7,50 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/buttons.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/inputs.css">
     <link rel="stylesheet" type="text/css" href="assets/css/profile.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 <body>
   <header>
-    <div class="logo">
-      <a href="index.html" class="logo" >Logo</a>
-    </div>
-      <a class="expansor"></a>
-      <h2 class="title">Cursos</h2>
-    <div class="center">
-        <nav>
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="courses.html">Cursos</a></li>
-            <li><a href="about.html">Sobre</a></li>
-            <li><a href="contact.html">Contato</a></li>
-          </ul>
-        </nav>
-    </div>
+      <nav class="navbar navbar-expand-lg bg-body-tertiary " data-bs-theme="dark">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">
+              <img src="#" alt="L" width="30" height="24" class="d-inline-block align-text-top">
+              Bootstrap
+            </a>
 
-    <div class="user-profile">
-        <a href="login.html" class="button-login">Login</a>
-        <a href="register.html" class="button-register">cadastra-se</a>
-    </div>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link active" style=" color: #ffcc00;" aria-current="page" href="courses.html">Cursos</a></li>
+                <li class="nav-item"><a class="nav-link" href="about.html">Sobre</a></li>
+                <li class="nav-item"><a class="nav-link" href="contact.html">Contato</a></li>
+              </ul>
+
+              <div class="user-profile">
+                  <a href="login.html" class="button-login">Login</a>
+                  <a href="register.html" class="button-register">cadastra-se</a>
+              </div>
+            </div>
+          </div>
+        </nav>
   </header>
   <main class="main">
+    <div class="container-md">
+      <div class="row row-cols-3" id="courses-container">
 
+      </div>
+    </div>
   </main>
   <footer>
     <!-- Conteúdo do footer -->
     <p>&copy; 2023 University. Todos os direitos reservados.</p>
   </footer>
   <script src="assets/js/script.js"></script>
+  <script src="assets/js/courses.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
