--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -3,18 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/buttons.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/inputs.css">
 </head>
 <body>
   <header>
-    <!-- Conteúdo do header -->
-    <div class="logo">
-      <a href="index.html" class="logo" >Logo</a>
-    </div>
-      <a class="expansor"></a>
-      <h2 class="title">Login</h2>
+      <nav class="navbar navbar-expand-lg bg-body-tertiary " data-bs-theme="dark">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">
+              <img src="#" alt="L" width="30" height="24" class="d-inline-block align-text-top">
+              Bootstrap
+            </a>
+
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="courses.html">Cursos</a></li>
+                <li class="nav-item"><a class="nav-link" href="about.html">Sobre</a></li>
+                <li class="nav-item"><a class="nav-link" href="contact.html">Contato</a></li>
+              </ul>
+
+              <div class="user-profile">
+                  <a href="login.html" class="button-login">Login</a>
+                  <a href="register.html" class="button-register">cadastra-se</a>
+              </div>
+            </div>
+          </div>
+        </nav>
   </header>
   <main class="main">
       <div class="container">
@@ -40,5 +61,6 @@
     <p>&copy; 2023 University. Todos os direitos reservados.</p>
   </footer>
   <script src="./assets/js/login.js"></script>
+  <script src="./assets/js/api.js"></script>"
 </body>
 </html>
