--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/buttons.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/inputs.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/profile.css">
+    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
 
 </head>
 <body>
@@ -15,8 +16,8 @@
       <nav class="navbar navbar-expand-lg bg-body-tertiary " data-bs-theme="dark">
           <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
-              <img src="#" alt="L" width="30" height="24" class="d-inline-block align-text-top">
-              Bootstrap
+              <img src="assets/img/icon.png" alt="SGC" width="30" height="24" class="d-inline-block align-text-top">
+                SGCURSOS
             </a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
