--- a/Frontend/contact.html
+++ b/Frontend/contact.html
@@ -2,34 +2,43 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>Contato</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/buttons.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/inputs.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/profile.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/profile.css">
+    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
+
 </head>
 <body>
   <header>
-    <div class="logo">
-      <a href="index.html" class="logo" >Logo</a>
-    </div>
-      <a class="expansor"></a>
-      <h2 class="title">Contato</h2>
-    <div class="center">
-        <nav>
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="courses.html">Cursos</a></li>
-            <li><a href="about.html">Sobre</a></li>
-            <li><a href="contact.html">Contato</a></li>
-          </ul>
-        </nav>
-    </div>
+      <nav class="navbar navbar-expand-lg bg-body-tertiary " data-bs-theme="dark">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">
+              <img src="assets/img/icon.png" alt="SGC" width="30" height="24" class="d-inline-block align-text-top">
+                SGCURSOS
+            </a>
 
-    <div class="user-profile">
-        <a href="login.html" class="button-login">Login</a>
-        <a href="register.html" class="button-register">cadastra-se</a>
-    </div>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="courses.html">Cursos</a></li>
+                <li class="nav-item"><a class="nav-link" href="about.html">Sobre</a></li>
+                <li class="nav-item"><a class="nav-link active" style=" color: #ffcc00;" aria-current="page" href="contact.html">Contato</a></li>
+              </ul>
+
+              <div class="user-profile">
+                  <a href="login.html" class="button-login">Login</a>
+                  <a href="register.html" class="button-register">cadastra-se</a>
+              </div>
+            </div>
+          </div>
+        </nav>
   </header>
   <main class="main">
 
@@ -39,5 +48,7 @@
     <p>&copy; 2023 University. Todos os direitos reservados.</p>
   </footer>
   <script src="assets/js/script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+
 </body>
 </html>
