--- a/Frontend/courses.html
+++ b/Frontend/courses.html
@@ -8,14 +8,15 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/inputs.css">
     <link rel="stylesheet" type="text/css" href="assets/css/profile.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
 </head>
 <body>
   <header>
       <nav class="navbar navbar-expand-lg bg-body-tertiary " data-bs-theme="dark">
           <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
-              <img src="#" alt="L" width="30" height="24" class="d-inline-block align-text-top">
-              Bootstrap
+              <img src="assets/img/icon.png" alt="L" width="30" height="24" class="d-inline-block align-text-top">
+              SGCURSOS
             </a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -23,12 +24,16 @@
             </button>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <ul class="navbar-nav ">
                 <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                 <li class="nav-item"><a class="nav-link active" style=" color: #ffcc00;" aria-current="page" href="courses.html">Cursos</a></li>
                 <li class="nav-item"><a class="nav-link" href="about.html">Sobre</a></li>
                 <li class="nav-item"><a class="nav-link" href="contact.html">Contato</a></li>
               </ul>
+              <form class="d-flex me-auto" onsubmit="search()">
+                <input  id="search-input" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Pesquisar</button>
+              </form>
 
               <div class="user-profile">
                   <a href="login.html" class="button-login">Login</a>
@@ -39,17 +44,19 @@
         </nav>
   </header>
   <main class="main">
-    <div class="container-md">
-      <div class="row row-cols-3" id="courses-container">
-
+      <div class="container-md glass-container" id="header-courses">
+          <div class="row row-cols-3 glass-container" id="courses-container">
+          </div>
       </div>
-    </div>
+
   </main>
+
   <footer>
     <!-- Conteúdo do footer -->
     <p>&copy; 2023 University. Todos os direitos reservados.</p>
   </footer>
   <script src="assets/js/script.js"></script>
+  <script src="assets/js/api.js"></script>
   <script src="assets/js/courses.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
