update admin page

--- a/Frontend/about.html
+++ b/Frontend/about.html
@@ -41,6 +41,51 @@
         </nav>
   </header>
   <main class="main">
+      <main class="main">
+          <div class="container-glass">
+            <div class="card text-center">
+              <div class="card-body">
+                <h2 class="card-title">Sobre</h2>
+        
+                <div class="row">
+                  <div class="col-md-6">
+                    <section class="card-section">
+                      <h3 class="section-title">Nossa Missão</h3>
+                      <p class="section-text">No SGCursos, nossa missão é proporcionar um ambiente de aprendizado acessível e de alta qualidade para estudantes interessados em tecnologia da informação. Queremos ajudar os alunos a desenvolver habilidades técnicas, expandir seu conhecimento e impulsionar suas carreiras.</p>
+                    </section>
+
+                    <section class="card-section">
+                      <h3 class="section-title">Metodologia de Ensino</h3>
+                      <p class="section-text">Nossa metodologia de ensino é baseada em práticas pedagógicas atualizadas, com foco na aplicação prática dos conhecimentos adquiridos. Nossos cursos são projetados para serem interativos e envolventes, combinando teoria com exemplos práticos, exercícios e projetos reais para garantir uma experiência de aprendizado enriquecedora.</p>
+                    </section>
+
+                    <section class="card-section">
+                      <h3 class="section-title">Certificados de Conclusão</h3>
+                      <p class="section-text">Ao concluir um curso no SGCursos, os alunos recebem um certificado oficial de conclusão, reconhecido pela indústria. Esses certificados podem ser compartilhados em currículos, perfis profissionais e redes sociais, demonstrando suas habilidades e conquistas no campo da tecnologia.</p>
+                    </section>
+                  </div>
+
+                  <div class="col-md-6">
+                    <section class="card-section">
+                      <h3 class="section-title">Nossos Cursos</h3>
+                      <p class="section-text">Oferecemos uma ampla variedade de cursos abrangendo diversas áreas da tecnologia. Nossos cursos são elaborados por especialistas da indústria e cobrem tópicos como desenvolvimento web, programação, banco de dados, segurança da informação, análise de dados e muito mais. Independentemente do seu nível de experiência, temos cursos adequados para você.</p>
+                    </section>
+
+                    <section class="card-section">
+                      <h3 class="section-title">Nossos Instrutores</h3>
+                      <p class="section-text">Contamos com uma equipe de instrutores altamente qualificados e experientes, que são profissionais da área de tecnologia com expertise em seus respectivos domínios. Nossos instrutores estão comprometidos em compartilhar seus conhecimentos e orientar os alunos em sua jornada de aprendizado.</p>
+                    </section>
+
+                    <section class="card-section">
+                      <h3 class="section-title">Junte-se a nós!</h3>
+                      <p class="section-text">Estamos ansiosos para ajudá-lo em sua jornada de aprendizado e crescimento profissional. Explore nossa variedade de cursos, escolha o que mais se adequa aos seus objetivos e comece a aprender hoje mesmo. Junte-se à comunidade do SGCursos e expanda suas habilidades em TI!</p>
+                    </section>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+      </main>
 
   </main>
   <footer>
