--- a/Frontend/course.html
+++ b/Frontend/course.html
@@ -41,45 +41,38 @@
         </nav>
   </header>
   <main class="main">
-      <div class="container text-center" style="min-width: 45%">
+      <div class="container text-center" style="min-width: 60%;">
           <div class="row" style="background: linear-gradient(to right, #478bd1, #71c7ec); border-radius: 10px; box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);">
               <div class="row">
-                <h1 class="pb-3" style="text-align: left; color: white;">Curso de Node.js</h1>
+                <h1 class="pb-3" id="course-title" style="text-align: left; color: white;">Curso de Node.js</h1>
               </div>
               <div class="row align-items-start">
                 <div class="col">
-                  <p style="color: white;">Carga Horária: <span style="font-weight: bold; background-color: rgba(255, 255, 255, 0.3); padding: 2px 6px; border-radius: 4px;">60 horas</span></p>
+                  <p style="color: white;" id="course-ch">Carga Horária: 0</p>
                 </div>
                 <div class="col">
-                  <p style="color: white;">Matriculados Atualmente: <span style="font-weight: bold; background-color: rgba(255, 255, 255, 0.3); padding: 2px 6px; border-radius: 4px;">50</span></p>
+                  <p style="color: white;" id="course-enrolled_count">Matriculados Atualmente: <span style="font-weight: bold; background-color: rgba(255, 255, 255, 0.3); padding: 2px 6px; border-radius: 4px;">50</span></p>
                 </div>
               </div>
           </div>
 
           <div class="row align-items-start pt-3">
             <div class="col">
-              <a type="button" class="btn btn-dark">Programação Web</a>
+              <a type="button" class="btn btn-dark" id="course-category">Programação Web</a>
             </div>
-            <div class="col">
-              <a type="button" class="btn btn-outline-primary btn-sm">JavaScript</a>
-              <a type="button" class="btn btn-outline-primary btn-sm">Node.js</a>
-              <a type="button" class="btn btn-outline-primary btn-sm">Express.js</a>
-              <a type="button" class="btn btn-outline-primary btn-sm">MongoDB</a>
-            </div>
+            <div class="col" id="course-tags">tags</div>
           </div>
 
           <div class="row align-items-start pt-3" style="background-color: #f8f9fa; border-radius: 5px; padding: 10px;">
             <div class="col">
-              <p class="mb-4" style="color: #333;">O curso de Node.js é projetado para ensinar os fundamentos da programação com Node.js. Você aprenderá a criar aplicativos web do lado do servidor usando JavaScript e o ambiente de tempo de execução do Node.js.</p>
+              <p class="mb-4" id="course-description" style="color: #333;">descricao</p>
               <p class="mb-2" style="color: #555;">Os tópicos abordados no curso incluem:</p>
-              <ul class="list-group list-group-flush list-group-numbered text-start">
-                <li class="list-group-item">Introdução ao Node.js</li>
-                <li class="list-group-item">Manipulação de arquivos e pastas</li>
-                <li class="list-group-item">Criação de servidores web com Express.js</li>
-                <li class="list-group-item">Acesso a bancos de dados com MongoDB</li>
-                <li class="list-group-item">Autenticação e autorização de usuários</li>
-              </ul>
-              <p class="mt-4" style="color: #333;">Este curso é adequado para iniciantes que desejam aprender a desenvolver aplicativos web com Node.js. Não são necessários conhecimentos prévios de programação.</p>
+              <ul class="list-group list-group-flush list-group-numbered text-start" id="course-lessons"></ul>
+              <p class="mt-4" style="color: #333;">
+                  Neste curso, você terá a oportunidade de aprimorar suas habilidades e conhecimentos em um ambiente prático e dinâmico.
+                  Explore os conceitos fundamentais, desenvolva projetos interessantes e aprenda com exemplos do mundo real.
+                  Este curso oferece uma abordagem abrangente e interativa para garantir que você
+                  obtenha uma compreensão sólida dos tópicos abordados.</p>
             </div>
           </div>
 
@@ -99,6 +92,8 @@
     <p>&copy; 2023 University. Todos os direitos reservados.</p>
   </footer>
   <script src="assets/js/script.js"></script>
+  <script src="assets/js/api.js"></script>
+  <script src="assets/js/course.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 
 </body>
