--- a/Frontend/courses.html
+++ b/Frontend/courses.html
@@ -44,19 +44,17 @@
         </nav>
   </header>
   <main class="main">
-      <div class="container-md glass-container" id="header-courses">
-          <div class="row row-cols-3 glass-container" id="courses-container">
-          </div>
+      <div class="glass-container" id="header-courses">
+        <div class="row row-cols-3 glass-container" id="courses-container"></div>
       </div>
-
   </main>
 
   <footer>
     <!-- Conteúdo do footer -->
     <p>&copy; 2023 University. Todos os direitos reservados.</p>
   </footer>
-  <script src="assets/js/script.js"></script>
   <script src="assets/js/api.js"></script>
+  <script src="assets/js/script.js"></script>
   <script src="assets/js/courses.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
