--- a/Frontend/edit.html
+++ b/Frontend/edit.html
@@ -53,20 +53,21 @@
             <div class="modal-content">
               <div class="modal-header">
                 <h5 class="modal-title" id="confirmationModalLabel">Confirmação</h5>
-                <button type="button" class="close btn btn-outline-danger"  style="border: none" aria-label="Fechar">
+                <button type="button" class="close btn btn-outline-danger" style="border: none" aria-label="Fechar">
                   <span aria-hidden="true">&times;</span>
                 </button>
               </div>
               <div class="modal-body">
-                <p>Tem certeza que deseja criar o curso?</p>
+                <p id="confirmationText"></p>
               </div>
               <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal" id="cancelBtn">Cancelar</button>
                 <button type="button" class="btn btn-primary" id="confirmBtn">Confirmar</button>
               </div>
             </div>
           </div>
-      </div>
+        </div>
+
 
     </div>
 
