--- a/Frontend/certificate.html
+++ b/Frontend/certificate.html
@@ -2,12 +2,13 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Curso</title>
+    <title>Certificado</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="./assets/css/profile.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/buttons.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/inputs.css">
-    <link rel="stylesheet" type="text/css" href="./assets/css/profile.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/certificate.css">
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
 
 </head>
@@ -41,56 +42,40 @@
         </nav>
   </header>
   <main class="main">
-      <div class="container text-center" style="min-width: 60%; margin-bottom: 100px">
-          <div class="row" style="background: linear-gradient(to right, #478bd1, #71c7ec); border-radius: 10px; box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);">
-              <div class="row">
-                <h1 class="pb-3" id="course-title" style="text-align: left; color: white;">Curso de Node.js</h1>
+        <div class="certificate">
+          <div class="row flex certificate-header">
+              <div class="col">
+                  <img src="assets/img/icon.png" alt="Logo da Instituição" class="certificate-logo" style="width: 80px; height: 80px; float: left; margin-right: 10px;">
               </div>
-              <div class="row align-items-start">
-                <div class="col">
-                  <p style="color: white;" id="course-ch">Carga Horária: 0</p>
-                </div>
-                <div class="col">
-                  <p style="color: white;" id="course-enrolled_count">Matriculados Atualmente: <span style="font-weight: bold; background-color: rgba(255, 255, 255, 0.3); padding: 2px 6px; border-radius: 4px;">50</span></p>
-                </div>
+              <div class="col" style="width: 80%">
+                  <h3>SGCURSOS</h3>
+                  <h1 class="certificate-title">Certificado de Conclusão</h1>
+                  <h3 class="certificate-subtitle">Nome do Curso</h3>
+              </div>
+              <div class="col">
+                  <img src="assets/icons/certificate-80.png" alt="Selo" class="certificate-image" style="width: 80px; height: 80px; float: right; margin-left: 10px;">
               </div>
           </div>
-
-          <div class="row align-items-start pt-3">
-            <div class="col" id="course-category">
-            </div>
-            <div class="col" id="course-tags">tags</div>
-          </div>
-
-          <div class="row align-items-start pt-3" style="background-color: #f8f9fa; border-radius: 5px; padding: 10px;">
-            <div class="col">
-              <p class="mb-4" id="course-description" style="color: #333;">descricao</p>
-              <p class="mb-2" style="color: #555;">Os tópicos abordados no curso incluem:</p>
-              <ul class="list-group list-group-flush list-group-numbered text-start" id="course-lessons"></ul>
-              <p class="mt-4" style="color: #333;">
-                  Neste curso, você terá a oportunidade de aprimorar suas habilidades e conhecimentos em um ambiente prático e dinâmico.
-                  Explore os conceitos fundamentais, desenvolva projetos interessantes e aprenda com exemplos do mundo real.
-                  Este curso oferece uma abordagem abrangente e interativa para garantir que você
-                  obtenha uma compreensão sólida dos tópicos abordados.</p>
-            </div>
-          </div>
-
-          <div class="row align-items-end pt-3">
-            <div class="col"></div>
-            <div class="col text-end">
-              <button type="button" class="btn btn-success">Matricule-se</button>
-            </div>
-          </div>
+          <p class="certificate-text">Este certificado é concedido a
+           Nome do Destinatário pelo numero de matricula (0000000) Pela conclusão do Nome do Curso com carga horária de 00 horas.</p>
+          </p>
+          <p class="certificate-text">Com notal Final:</p>
+          <h3 class="certificate-subtitle">nota</h3>
+          <p class="certificate-text">Concluído em: Data de Conclusão</p>
+          <p class="certificate-code">Código de Verificação <br>XXXX-XXXX-XXXX-XXXX</p>
+          <a> para verificar a autenticidade deste certificado acesse: <a href="validar.html">www.sgcursos.com.br/validar</a></a>
         </div>
-  </main>
 
+        <div class="print-button" style="text-align: center; margin-top: 20px;">
+          <button onclick="window.print()" style="padding: 10px 20px; font-size: 16px; background-color: #4285f4; color: #fff; border: none; border-radius: 4px; cursor: pointer;">Imprimir Certificado</button>
+        </div>
+
+  </main>
   <footer>
     <!-- Conteúdo do footer -->
     <p>&copy; 2023 University. Todos os direitos reservados.</p>
   </footer>
   <script src="assets/js/script.js"></script>
-  <script src="assets/js/api.js"></script>
-  <script src="assets/js/course.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 
 </body>
