--- a/Frontend/courses.html
+++ b/Frontend/courses.html
@@ -29,6 +29,7 @@
                 <li class="nav-item"><a class="nav-link active" style=" color: #ffcc00;" aria-current="page" href="courses.html">Cursos</a></li>
                 <li class="nav-item"><a class="nav-link" href="about.html">Sobre</a></li>
                 <li class="nav-item"><a class="nav-link" href="contact.html">Contato</a></li>
+                <li class="nav-item"><a class="nav-link" href="validar.html">Validar</a></li>
               </ul>
               <form class="d-flex me-auto" onsubmit="search()">
                 <input  id="search-input" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
