--- a/Frontend/register.html
+++ b/Frontend/register.html
@@ -27,6 +27,7 @@
                 <li class="nav-item"><a class="nav-link" href="courses.html">Cursos</a></li>
                 <li class="nav-item"><a class="nav-link" href="about.html">Sobre</a></li>
                 <li class="nav-item"><a class="nav-link" href="contact.html">Contato</a></li>
+                <li class="nav-item"><a class="nav-link" href="validar.html">Validar</a></li>
               </ul>
 
               <div class="user-profile">
@@ -83,7 +84,8 @@
     <!-- Conteúdo do footer -->
     <p>&copy; 2023 University. Todos os direitos reservados.</p>
   </footer>
-  <script src="assets/js/register.js"></script>
+  <script src="assets/js/api.js"></script>
   <script src="assets/js/validator.js"></script>
+  <script src="assets/js/register.js"></script>
 </body>
 </html>
