--- a/Frontend/about.html
+++ b/Frontend/about.html
@@ -30,6 +30,7 @@
                 <li class="nav-item"><a class="nav-link" href="courses.html">Cursos</a></li>
                 <li class="nav-item"><a class="nav-link active" style=" color: #ffcc00;" aria-current="page" href="about.html">Sobre</a></li>
                 <li class="nav-item"><a class="nav-link" href="contact.html">Contato</a></li>
+                <li class="nav-item"><a class="nav-link" href="validar.html">Validar</a></li>
               </ul>
 
               <div class="user-profile">
