--- a/Frontend/contact.html
+++ b/Frontend/contact.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/buttons.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/inputs.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/profile.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/contact.css">
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
 
 </head>
@@ -30,6 +31,7 @@
                 <li class="nav-item"><a class="nav-link" href="courses.html">Cursos</a></li>
                 <li class="nav-item"><a class="nav-link" href="about.html">Sobre</a></li>
                 <li class="nav-item"><a class="nav-link active" style=" color: #ffcc00;" aria-current="page" href="contact.html">Contato</a></li>
+                <li class="nav-item"><a class="nav-link" href="validar.html">Validar</a></li>
               </ul>
 
               <div class="user-profile">
