--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -120,8 +120,9 @@
   </main>
   <footer>
     <!-- Conteúdo do footer -->
-    <p>&copy; 2023 University. Todos os direitos reservados.</p>
+    <p>&copy; 2023 by. Kaio Guilherme. Todos os direitos reservados.</p>
   </footer>
+  <script src="assets/js/config.js"></script>
   <script src="assets/js/script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 
