--- a/Frontend/register.html
+++ b/Frontend/register.html
@@ -82,8 +82,9 @@
   </main>
   <footer>
     <!-- Conteúdo do footer -->
-    <p>&copy; 2023 University. Todos os direitos reservados.</p>
+    <p>&copy; 2023 by. Kaio Guilherme. Todos os direitos reservados.</p>
   </footer>
+  <script src="assets/js/config.js"></script>
   <script src="assets/js/api.js"></script>
   <script src="assets/js/validator.js"></script>
   <script src="assets/js/register.js"></script>
