--- a/Frontend/users.html
+++ b/Frontend/users.html
@@ -67,8 +67,9 @@
 
   <footer>
     <!-- Conteúdo do footer -->
-    <p>&copy; 2023 University. Todos os direitos reservados.</p>
+    <p>&copy; 2023 by. Kaio Guilherme. Todos os direitos reservados.</p>
   </footer>
+  <script src="assets/js/config.js"></script>
   <script src="assets/js/api.js"></script>
   <script src="assets/js/script.js"></script>
   <script src="assets/js/users.js"></script>
