correção de bugs

--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -7,13 +7,14 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/buttons.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/inputs.css">
+    <link rel="icon" type="image/x-icon" href="./assets/img/favicon.ico">
 </head>
 <body>
   <header>
       <nav class="navbar navbar-expand-lg bg-body-tertiary " data-bs-theme="dark">
           <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
-              <img src="#" alt="L" width="30" height="24" class="d-inline-block align-text-top">
+              <img src="./assets/img/icon.png" alt="L" width="30" height="24" class="d-inline-block align-text-top">
               Bootstrap
             </a>
 
@@ -61,7 +62,7 @@
     <!-- Conteúdo do footer -->
     <p>&copy; 2023 by. Kaio Guilherme. Todos os direitos reservados.</p>
   </footer>
-  <script src="assets/js/config.js"></script>
+  <script src="./assets/js/config.js"></script>
   <script src="./assets/js/api.js"></script>"
   <script src="./assets/js/login.js"></script>
 </body>
