--- a/Frontend/register.html
+++ b/Frontend/register.html
@@ -84,9 +84,9 @@
     <!-- Conteúdo do footer -->
     <p>&copy; 2023 by. Kaio Guilherme. Todos os direitos reservados.</p>
   </footer>
-  <script src="assets/js/config.js"></script>
-  <script src="assets/js/api.js"></script>
-  <script src="assets/js/validator.js"></script>
-  <script src="assets/js/register.js"></script>
+  <script src="./assets/js/config.js"></script>
+  <script src="./assets/js/api.js"></script>
+  <script src="./assets/js/validator.js"></script>
+  <script src="./assets/js/register.js"></script>
 </body>
 </html>
