--- a/Frontend/Defalt.html
+++ b/Frontend/Defalt.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/buttons.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/inputs.css">
-    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="./assets/img/favicon.ico">
 
 </head>
 <body>
@@ -16,7 +16,7 @@
       <nav class="navbar navbar-expand-lg bg-body-tertiary " data-bs-theme="dark">
           <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
-              <img src="assets/img/icon.png" alt="SGC" width="30" height="24" class="d-inline-block align-text-top">
+              <img src="./assets/img/icon.png" alt="SGC" width="30" height="24" class="d-inline-block align-text-top">
                 SGCURSOS
             </a>
 
@@ -48,8 +48,8 @@
     <!-- Conteúdo do footer -->
     <p>&copy; 2023 by. Kaio Guilherme. Todos os direitos reservados.</p>
   </footer>
-  <script src="assets/js/config.js"></script>
-  <script src="assets/js/script.js"></script>
+  <script src="./assets/js/config.js"></script>
+  <script src="./assets/js/script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 
 </body>
