--- a/Frontend/my-courses.html
+++ b/Frontend/my-courses.html
@@ -6,16 +6,16 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/buttons.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/inputs.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/profile.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/profile.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="./assets/img/favicon.ico">
 </head>
 <body>
   <header>
       <nav class="navbar navbar-expand-lg bg-body-tertiary " data-bs-theme="dark">
           <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
-              <img src="assets/img/icon.png" alt="L" width="30" height="24" class="d-inline-block align-text-top">
+              <img src="./assets/img/icon.png" alt="L" width="30" height="24" class="d-inline-block align-text-top">
               SGCURSOS
             </a>
 
@@ -51,10 +51,10 @@
     <!-- Conteúdo do footer -->
     <p>&copy; 2023 by. Kaio Guilherme. Todos os direitos reservados.</p>
   </footer>
-  <script src="assets/js/config.js"></script>
-  <script src="assets/js/api.js"></script>
-  <script src="assets/js/script.js"></script>
-  <script src="assets/js/my-courses.js"></script>
+  <script src="./assets/js/config.js"></script>
+  <script src="./assets/js/api.js"></script>
+  <script src="./assets/js/script.js"></script>
+  <script src="./assets/js/my-courses.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
