--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -42,81 +42,40 @@
         </nav>
   </header>
   <main class="main">
-    <section class="jumbotron glass-container text-center">
-      <div class="glass-container">
-        <h1 class="display-4">Bem-vindo à SGCURSOS</h1>
-        <p class="lead">Aprenda tecnologia com nossos cursos especializados</p>
-        <a href="#" class="btn btn-primary btn-lg">Ver Cursos</a>
-      </div>
+    <section>
+        <div class="p-5 mb-4 bg-body-primary rounded-3" style="background: #1a1a1a; color: #ffffff;">
+          <div class="container-fluid py-5">
+            <h1 class="display-5 fw-bold">SGCursos - Sua Plataforma de Cursos Online de Tecnologia</h1>
+            <p class="col-md-8 fs-4">Bem-vindo ao SGCursos, a plataforma líder em cursos online de tecnologia. Seja você um iniciante ou um profissional experiente, oferecemos uma ampla gama de cursos para aprimorar suas habilidades e conhecimentos em diversos campos da tecnologia.</p>
+            <p class="col-md-8 fs-4">Com nossos instrutores especializados e materiais de curso abrangentes, você pode aprender no seu próprio ritmo e obter informações valiosas sobre as últimas tecnologias e tendências do setor.</p>
+            <p class="col-md-8 fs-4">Visite nosso catálogo de cursos para explorar a diversidade de tópicos que cobrimos, incluindo linguagens de programação, desenvolvimento web, ciência de dados, inteligência artificial, cibersegurança e muito mais.</p>
+            <a class="btn btn-primary btn-lg" href="courses.html" type="button">Ver Cursos</a>
+          </div>
+        </div>
     </section>
-
-    <!-- Cursos Section -->
-    <section class="glass-container">
-      <h2 class="text-center mb-4">Nossos Cursos</h2>
-      <div id="carouselCourses" class="carousel slide" data-ride="carousel" aria-label="Carrossel de Cursos">
-        <ol class="carousel-indicators">
-          <li data-target="#carouselCourses" data-slide-to="0" class="active" aria-label="Slide 1"></li>
-          <li data-target="#carouselCourses" data-slide-to="1" aria-label="Slide 2"></li>
-          <li data-target="#carouselCourses" data-slide-to="2" aria-label="Slide 3"></li>
-        </ol>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="course1.jpg" class="d-block w-100" alt="Curso de Desenvolvimento Web">
-            <div class="carousel-caption">
-              <h5>Curso de Desenvolvimento Web</h5>
-              <p>Aprenda a criar sites incríveis com as mais recentes tecnologias web.</p>
-              <a href="#" class="btn btn-primary">Saiba Mais</a>
+    <section>
+        <div class="row align-items-md-stretch">
+          <div class="col-md-6">
+            <div class="h-100 p-5 text-bg-dark rounded-3">
+              <h2>Entre em Contato para Dúvidas sobre Cursos</h2>
+              <p>Tem dúvidas sobre nossos cursos ou precisa de ajuda para escolher o curso certo para você? Nossa equipe de suporte dedicada está aqui para ajudar.</p>
+              <p>Sinta-se à vontade para entrar em contato conosco por telefone ou e-mail, e forneceremos todas as informações necessárias para que você possa tomar uma decisão informada.</p>
+              <p>Telefone: 123-456-7890</p>
+              <p>Email: info@sgcursos.com</p>
+              <a class="btn btn-outline-light" href="contact.html" type="button">Entre em Contato</a>
             </div>
           </div>
-          <div class="carousel-item">
-            <img src="course2.jpg" class="d-block w-100" alt="Curso de Data Science">
-            <div class="carousel-caption">
-              <h5>Curso de Data Science</h5>
-              <p>Descubra insights valiosos a partir de dados com as técnicas de Data Science.</p>
-              <a href="#" class="btn btn-primary">Saiba Mais</a>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="course3.jpg" class="d-block w-100" alt="Curso de Desenvolvimento Mobile">
-            <div class="carousel-caption">
-              <h5>Curso de Desenvolvimento Mobile</h5>
-              <p>Crie aplicativos móveis incríveis para iOS e Android.</p>
-              <a href="#" class="btn btn-primary">Saiba Mais</a>
+          <div class="col-md-6">
+            <div class="h-100 p-5 bg-body-tertiary border rounded-3">
+              <h2>Validação de Certificado</h2>
+              <p>No SGCursos, entendemos a importância de validar suas conquistas. Com nosso serviço de validação de certificados, você pode verificar a autenticidade dos seus certificados de conclusão de curso.</p>
+              <p>Basta inserir o código do seu certificado em nosso site, e forneceremos um relatório detalhado de verificação.</p>
+              <p>Garanta que suas realizações sejam reconhecidas e confiáveis ​​no setor.</p>
+              <a class="btn btn-outline-secondary" href="validar.html" type="button">Verificar Certificado</a>
             </div>
           </div>
         </div>
-        <a class="carousel-control-prev" href="#carouselCourses" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Anterior</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselCourses" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Próximo</span>
-        </a>
-      </div>
     </section>
-
-
-      <!-- Informações Adicionais -->
-      <section class="glass-container" py-5">
-        <div class="row">
-          <div class="col-lg-6">
-            <h2>Sobre Nós</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vel ligula vitae quam dignissim laoreet.
-              Nulla facilisi. Curabitur in mi ac lacus iaculis lobortis. Proin fringilla massa a ipsum viverra ultrices.
-              Aenean quis finibus odio.</p>
-          </div>
-          <div class="col-lg-6">
-            <h2>Contato</h2>
-            <p>Entre em contato conosco para mais informações sobre nossos cursos:</p>
-            <ul>
-              <li>Telefone: (XX) XXXX-XXXX</li>
-              <li>Email: contato@sgcursos.com</li>
-              <li>Endereço: Rua dos Cursos, 123, Cidade, Estado</li>
-            </ul>
-          </div>
-        </div>
-      </section>
   </main>
   <footer>
     <!-- Conteúdo do footer -->
