--- a/Frontend/about.html
+++ b/Frontend/about.html
@@ -12,6 +12,31 @@
 
 </head>
 <body>
+    <style>
+        body {
+            background-color: #f8f9fa;
+        }
+
+        .container-glass {
+            background-color: rgba(255, 255, 255, 0.8);
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .card-section {
+            margin-bottom: 20px;
+        }
+
+        .section-title {
+            color: #007bff;
+        }
+
+        .section-text {
+            font-size: 16px;
+            line-height: 1.6;
+        }
+    </style>
   <header>
       <nav class="navbar navbar-expand-lg bg-body-tertiary " data-bs-theme="dark">
           <div class="container-fluid">
@@ -43,49 +68,49 @@
   </header>
   <main class="main">
       <main class="main">
-          <div class="container-glass">
+         <div class="container-glass">
             <div class="card text-center">
-              <div class="card-body">
-                <h2 class="card-title">Sobre</h2>
-        
-                <div class="row">
-                  <div class="col-md-6">
-                    <section class="card-section">
-                      <h3 class="section-title">Nossa Missão</h3>
-                      <p class="section-text">No SGCursos, nossa missão é proporcionar um ambiente de aprendizado acessível e de alta qualidade para estudantes interessados em tecnologia da informação. Queremos ajudar os alunos a desenvolver habilidades técnicas, expandir seu conhecimento e impulsionar suas carreiras.</p>
-                    </section>
+                <div class="card-body">
+                    <h2 class="card-title">Sobre</h2>
 
-                    <section class="card-section">
-                      <h3 class="section-title">Metodologia de Ensino</h3>
-                      <p class="section-text">Nossa metodologia de ensino é baseada em práticas pedagógicas atualizadas, com foco na aplicação prática dos conhecimentos adquiridos. Nossos cursos são projetados para serem interativos e envolventes, combinando teoria com exemplos práticos, exercícios e projetos reais para garantir uma experiência de aprendizado enriquecedora.</p>
-                    </section>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <section class="card-section">
+                                <h3 class="section-title">Nossa Missão</h3>
+                                <p class="section-text">No SGCursos, nossa missão é proporcionar um ambiente de aprendizado acessível e de alta qualidade para estudantes interessados em tecnologia da informação. Queremos ajudar os alunos a desenvolver habilidades técnicas, expandir seu conhecimento e impulsionar suas carreiras.</p>
+                            </section>
 
-                    <section class="card-section">
-                      <h3 class="section-title">Certificados de Conclusão</h3>
-                      <p class="section-text">Ao concluir um curso no SGCursos, os alunos recebem um certificado oficial de conclusão, reconhecido pela indústria. Esses certificados podem ser compartilhados em currículos, perfis profissionais e redes sociais, demonstrando suas habilidades e conquistas no campo da tecnologia.</p>
-                    </section>
-                  </div>
+                            <section class="card-section">
+                                <h3 class="section-title">Metodologia de Ensino</h3>
+                                <p class="section-text">Nossa metodologia de ensino é baseada em práticas pedagógicas atualizadas, com foco na aplicação prática dos conhecimentos adquiridos. Nossos cursos são projetados para serem interativos e envolventes, combinando teoria com exemplos práticos, exercícios e projetos reais para garantir uma experiência de aprendizado enriquecedora.</p>
+                            </section>
 
-                  <div class="col-md-6">
-                    <section class="card-section">
-                      <h3 class="section-title">Nossos Cursos</h3>
-                      <p class="section-text">Oferecemos uma ampla variedade de cursos abrangendo diversas áreas da tecnologia. Nossos cursos são elaborados por especialistas da indústria e cobrem tópicos como desenvolvimento web, programação, banco de dados, segurança da informação, análise de dados e muito mais. Independentemente do seu nível de experiência, temos cursos adequados para você.</p>
-                    </section>
+                            <section class="card-section">
+                                <h3 class="section-title">Certificados de Conclusão</h3>
+                                <p class="section-text">Ao concluir um curso no SGCursos, os alunos recebem um certificado oficial de conclusão, reconhecido pela indústria. Esses certificados podem ser compartilhados em currículos, perfis profissionais e redes sociais, demonstrando suas habilidades e conquistas no campo da tecnologia.</p>
+                            </section>
+                        </div>
 
-                    <section class="card-section">
-                      <h3 class="section-title">Nossos Instrutores</h3>
-                      <p class="section-text">Contamos com uma equipe de instrutores altamente qualificados e experientes, que são profissionais da área de tecnologia com expertise em seus respectivos domínios. Nossos instrutores estão comprometidos em compartilhar seus conhecimentos e orientar os alunos em sua jornada de aprendizado.</p>
-                    </section>
+                        <div class="col-md-6">
+                            <section class="card-section">
+                                <h3 class="section-title">Nossos Cursos</h3>
+                                <p class="section-text">Oferecemos uma ampla variedade de cursos abrangendo diversas áreas da tecnologia. Nossos cursos são elaborados por especialistas da indústria e cobrem tópicos como desenvolvimento web, programação, banco de dados, segurança da informação, análise de dados e muito mais. Independentemente do seu nível de experiência, temos cursos adequados para você.</p>
+                            </section>
 
-                    <section class="card-section">
-                      <h3 class="section-title">Junte-se a nós!</h3>
-                      <p class="section-text">Estamos ansiosos para ajudá-lo em sua jornada de aprendizado e crescimento profissional. Explore nossa variedade de cursos, escolha o que mais se adequa aos seus objetivos e comece a aprender hoje mesmo. Junte-se à comunidade do SGCursos e expanda suas habilidades em TI!</p>
-                    </section>
-                  </div>
+                            <section class="card-section">
+                                <h3 class="section-title">Nossos Instrutores</h3>
+                                <p class="section-text">Contamos com uma equipe de instrutores altamente qualificados e experientes, que são profissionais da área de tecnologia com expertise em seus respectivos domínios. Nossos instrutores estão comprometidos em compartilhar seus conhecimentos e orientar os alunos em sua jornada de aprendizado.</p>
+                            </section>
+
+                            <section class="card-section">
+                                <h3 class="section-title">Junte-se a nós!</h3>
+                                <p class="section-text">Estamos ansiosos para ajudá-lo em sua jornada de aprendizado e crescimento profissional. Explore nossa variedade de cursos, escolha o que mais se adequa aos seus objetivos e comece a aprender hoje mesmo. Junte-se à comunidade do SGCursos e expanda suas habilidades em TI!</p>
+                            </section>
+                        </div>
+                    </div>
                 </div>
-              </div>
             </div>
-          </div>
+        </div>
       </main>
 
   </main>
