--- a/Frontend/my-courses.html
+++ b/Frontend/my-courses.html
@@ -24,7 +24,7 @@
             </button>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav ">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
                 <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                 <li class="nav-item"><a class="nav-link active" style=" color: #ffcc00;" aria-current="page" href="courses.html">Cursos</a></li>
                 <li class="nav-item"><a class="nav-link" href="about.html">Sobre</a></li>
